// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.4)",
        "height": "100%",
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
        "zIndex": 1,
      },
      Object {
        "backgroundColor": "transparent",
        "height": 0,
        "width": 0,
      },
    ]
  }
>
  <TouchableOpacity
    activeOpacity={1}
    disabled={false}
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
        "zIndex": 1,
      }
    }
  >
    <Animated.View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.4)",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
            "zIndex": 1,
          },
          Object {
            "opacity": Object {},
          },
        ]
      }
    />
  </TouchableOpacity>
  <Animated.View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 5,
          "borderWidth": 2,
          "elevation": 10,
          "maxHeight": 1329.2307692307693,
          "minHeight": 250,
          "padding": 10,
          "position": "absolute",
          "width": "85%",
          "zIndex": 2,
        },
        Object {
          "opacity": Object {},
          "transform": Array [
            Object {
              "scale": Object {},
            },
          ],
        },
      ]
    }
  >
    <ScrollView
      keyboardShouldPersistTaps="always"
      scrollEnabled={true}
    >
      <Button
        color="primary"
        label="Stäng"
        uppercase={true}
      />
    </ScrollView>
  </Animated.View>
</View>
`;

exports[`should match snapshot 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.4)",
        "height": "100%",
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
        "zIndex": 1,
      },
      Object {
        "backgroundColor": "transparent",
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <TouchableOpacity
    activeOpacity={1}
    disabled={true}
    style={
      Object {
        "height": "100%",
        "position": "absolute",
        "width": "100%",
        "zIndex": 1,
      }
    }
  >
    <Animated.View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.4)",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
            "zIndex": 1,
          },
          Object {
            "opacity": Object {},
          },
        ]
      }
    />
  </TouchableOpacity>
  <Animated.View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 5,
          "borderWidth": 2,
          "elevation": 10,
          "maxHeight": 1329.2307692307693,
          "minHeight": 250,
          "padding": 10,
          "position": "absolute",
          "width": "85%",
          "zIndex": 2,
        },
        Object {
          "opacity": Object {},
          "transform": Array [
            Object {
              "scale": Object {},
            },
          ],
        },
      ]
    }
  >
    <ScrollView
      keyboardShouldPersistTaps="always"
      scrollEnabled={true}
    >
      <Button
        color="primary"
        label="Stäng"
        uppercase={true}
      />
    </ScrollView>
  </Animated.View>
</View>
`;

exports[`should match snapshot 3`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.4)",
        "height": "100%",
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
        "zIndex": 1,
      },
      Object {
        "backgroundColor": "transparent",
        "height": 0,
        "width": 0,
      },
    ]
  }
>
  <TouchableOpacity
    activeOpacity={1}
    disabled={true}
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
        "zIndex": 1,
      }
    }
  >
    <Animated.View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.4)",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
            "zIndex": 1,
          },
          Object {
            "opacity": Object {},
          },
        ]
      }
    />
  </TouchableOpacity>
  <Animated.View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 5,
          "borderWidth": 2,
          "elevation": 10,
          "maxHeight": 1329.2307692307693,
          "minHeight": 250,
          "padding": 10,
          "position": "absolute",
          "width": "85%",
          "zIndex": 2,
        },
        Object {
          "opacity": Object {},
          "transform": Array [
            Object {
              "scale": Object {},
            },
          ],
        },
      ]
    }
  >
    <ScrollView
      keyboardShouldPersistTaps="always"
      scrollEnabled={true}
    >
      <Button
        color="primary"
        label="Stäng"
        uppercase={true}
      />
    </ScrollView>
  </Animated.View>
</View>
`;
